--- a/src/Components/Projects/ProjectModal4/projectModal4.module.css
+++ b/src/Components/Projects/ProjectModal4/projectModal4.module.css
@@ -12,6 +12,7 @@
 .projectDetailContainer{
     color: white;
     padding: 15px;
+    padding-bottom: 0;
 }
 .projectDetailContainer p, .projectDetailContainer li {
     color: #b3bac7;
@@ -34,7 +35,8 @@
     color: gray;
 }
 .projectLinks {
-    margin-top: 60px;
+    margin-top: 30px;
+    padding-bottom: 10px;
 }
 .projectLinks a {
     background: #BBBCC0;
@@ -69,6 +71,19 @@
 .ModalContainer:hover .moreInfoBtn{
     display: inline-block;
 }
-.carousel-indicators li {
-    background-color: red !important;
+.leftColumn {
+    padding: 0 !important;
+}
+@media only screen and (max-width: 991px) {
+    .projectFeatures {
+        display: none;
+    }
+    .projectIntro {
+        display: none;
+    }
+}
+@media only screen and (max-width: 768px) {
+    .leftColumn {
+        display: none;
+    }
 }
