--- a/src/Components/Common/StickySidebar/stickySidebar.module.css
+++ b/src/Components/Common/StickySidebar/stickySidebar.module.css
@@ -24,3 +24,8 @@
     text-decoration: none;
     color: white;
 }
+@media only screen and (max-width: 991px) {
+    .SidebarContainer {
+      display: none;
+    }
+}
