--- a/src/Components/Home/home.module.css
+++ b/src/Components/Home/home.module.css
@@ -1,17 +1,13 @@
 .MainContent {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     padding: 40px;
     text-align: center;
 }
 .SakilImg {
     max-width: 100%;
-    width: 50%;
-    border: 5px solid whitesmoke;
-    
+    height: 320px;
+    width: 352px;
     margin-bottom: 10px;
+    border-radius: 50%;
 }
 .MainContent a {
     color: white;
@@ -28,4 +24,9 @@
     text-decoration: none;
     color: white;
     transform: scale(1.1);
+}
+@media only screen and (max-width: 991px) {
+    .SakilImg {
+        height: 215px;
+    }
 }
