--- a/src/Components/Projects/ProjectModal2/projectModal2.module.css
+++ b/src/Components/Projects/ProjectModal2/projectModal2.module.css
@@ -1,5 +1,5 @@
 .ModalContainer {
-    background: url('../../../assets/volunteerNetwork/logo.png') no-repeat;
+    background: url('../../../assets/funFindrr/logo.png') no-repeat;
     height: 100%;
     max-height: 100%;
     max-width: 100%;
