--- a/src/Components/Projects/ProjectModal3/projectModal3.module.css
+++ b/src/Components/Projects/ProjectModal3/projectModal3.module.css
@@ -1,5 +1,5 @@
 .ModalContainer {
-    background: url('../../../assets/pinMatcher/logo.png') no-repeat;
+    background: url('../../../assets/trillo/logo.png') no-repeat;
     height: 100%;
     max-height: 100%;
     max-width: 100%;
